--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "databricks-vscode",
 	"displayName": "Databricks Power Tools",
 	"description": "Run notebooks cell-by-cell, browse and edit your Databricks Workspace, DBFS, Clusters, Jobs, Secrets, Repos and SQL. Supports Azure Databricks, Databricks on AWS and Databricks on GCP.",
-	"version": "2.2.2",
+	"version": "2.2.3",
 	"publisher": "paiqo",
 	"icon": "resources/databricks_extension.png",
 	"author": {
@@ -135,7 +135,7 @@
 									".py",
 									".ipynb"
 								],
-								"description": "The file extension used when downloading Python notebooks from Databricks."
+								"description": "The file extension used when downloading Python notebooks from Databricks. If you want to use FilesInWorkspace, this must be set to '.ipynb!'"
 							},
 							"SQL": {
 								"type": "string",
@@ -267,7 +267,7 @@
 												".py",
 												".ipynb"
 											],
-											"description": "The file extension used when downloading Python notebooks from Databricks."
+											"description": "The file extension used when downloading Python notebooks from Databricks. If you want to use FilesInWorkspace, this must be set to '.ipynb!'"
 										},
 										"SQL": {
 											"type": "string",
