--- a/.github/workflows/create_release_and_publish.yaml
+++ b/.github/workflows/create_release_and_publish.yaml
@@ -29,6 +29,14 @@ jobs:
       - name: Install vsce
         run: npm i -g vsce
 
+      # we first publish to VSCode gallery 
+      # in case that version is already there, it would fail and also not overwrite the Github Release
+      - name: Publish extension
+        if: ${{ inputs.publish == 'true' }} || ${{ github.event_name == 'push' }}
+        env:
+          VSCE_PUBLISH_TOKEN: ${{ secrets.VSCE_PUBLISH_TOKEN }}
+        run: vsce publish -p $VSCE_PUBLISH_TOKEN
+
       - name: Calculate version/tag-name from package.json
         id: calculatePackageVersion
         run: |
@@ -51,9 +59,3 @@ jobs:
           files: |
             *.vsix
             CHANGELOG.md
-
-      - name: Publish extension
-        if: ${{ inputs.publish == 'true' }} || ${{ github.event_name == 'push' }}
-        env:
-          VSCE_PUBLISH_TOKEN: ${{ secrets.VSCE_PUBLISH_TOKEN }}
-        run: vsce publish -p $VSCE_PUBLISH_TOKEN
