--- a/.github/workflows/create_release_and_publish.yaml
+++ b/.github/workflows/create_release_and_publish.yaml
@@ -23,6 +23,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Dump GITHUB context
+        env:
+          GITHUB: ${{ toJSON(github) }}
+        run: echo "${GITHUB}"
+
+      - name: Dump input context
+        env:
+          INPUTS: ${{ toJSON(inputs) }}
+        run: echo "${INPUTS}"
+
       - name: Install npm
         run: npm install
 
@@ -32,7 +42,7 @@ jobs:
       # we first publish to VSCode gallery 
       # in case that version is already there, it would fail and also not overwrite the Github Release
       - name: Publish extension
-        if: ${{ inputs.publish == 'true' }} || ${{ github.event_name == 'push' }}
+        if: ${{ (inputs.publish == 'true') || (github.event_name == 'push') }}
         env:
           VSCE_PUBLISH_TOKEN: ${{ secrets.VSCE_PUBLISH_TOKEN }}
         run: vsce publish -p $VSCE_PUBLISH_TOKEN
