--- a/.github/workflows/create_release_and_publish.yaml
+++ b/.github/workflows/create_release_and_publish.yaml
@@ -41,11 +41,17 @@ jobs:
 
       # we first publish to VSCode gallery 
       # in case that version is already there, it would fail and also not overwrite the Github Release
-      - name: Publish extension
+      - name: Publish extension to VSCode Marketplace
         if: ${{ (inputs.publish == 'true') || (github.event_name == 'push') }}
         env:
           VSCE_PUBLISH_TOKEN: ${{ secrets.VSCE_PUBLISH_TOKEN }}
         run: vsce publish -p $VSCE_PUBLISH_TOKEN
+
+      - name: Publish extension to Open VSX Registry
+        uses: HaaLeo/publish-vscode-extension@v2
+        id: publishToOpenVSX
+        with:
+          pat: ${{ secrets.OPENVSX_PUBLISH_TOKEN }}
 
       - name: Calculate version/tag-name from package.json
         id: calculatePackageVersion
