add conditional publish

--- a/.github/workflows/create_release_and_publish.yaml
+++ b/.github/workflows/create_release_and_publish.yaml
@@ -40,6 +40,7 @@ jobs:
       - name: Publish extension to Open VSX Registry
         uses: HaaLeo/publish-vscode-extension@v2
         id: publishToOpenVSX
+        if: ${{ (inputs.publish == 'true') || (github.event_name == 'push') }}
         with:
           pat: ${{ secrets.OPENVSX_PUBLISH_TOKEN }}
 
